#pragma once

namespace sfu {
    
class Widget
{
public:
    Widget();
    ~Widget();
    
private:

};

} // namespace sfu
